[package]
name = "mlb"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = { version="4.0.29", features = ["derive"]}
reqwest = {version = "0.11.4", features = ["json", "blocking"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tabled = "0.7.0"
async-trait = {version = "0.1.51"}
tokio = {version = "1.12.0", features = ["rt-multi-thread", "macros"]}
chrono = {version = "0.4.19", features = ["serde"]}
log = "0.4.14"
pretty_env_logger = "0.4.0"
config = "0.11.0"
dirs = "4.0.0"
tokio-stream = "0.1.7"

[build-dependencies]
http_req = "0.8.1"

[lib]
name = "mlb"
path = "src/lib.rs"

[[bin]]
name = "mlb"
path = "src/bin/main.rs"
